Assignment-4 Mac Book Pro

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="p-5">
+    <!-- Main -->
     <div class="container">
+        <!-- Product Details -->
         <div class="row g-5 m-auto p-3">
+            <!-- Product Image -->
             <div class="col-5 align-middle p-5">
                 <img src="images/mac.png" class="w-100" alt="">
             </div>
+
+            <!-- Product Information -->
             <div class="col-7 align-middle">
                 <h2>Customize your Blue 24-inch <br>iMac with Apple M1 chip.</h2>
                 <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency <br>d cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB <br> SSD storage Two Thuderbolt/USB 4 ports Magic Mouse Magic Keyboard - <br> US English.</p>
@@ -48,6 +53,7 @@
                 </div> 
                 <br>
                 <br>
+
                 <!-- Invoice Table -->
                 <table class="table table-dark table-hover">
                     <tbody>
@@ -68,8 +74,8 @@
                           <td>$ <span>0</span></td>
                         </tr>
                         <tr>
-                          <td>Total Price</td>
-                          <td>$ <span>0</span></td>
+                          <td class="text-warning">Total Price</td>
+                          <td class="text-warning">$ <span>0</span></td>
                         </tr>                      
                     </tbody>                   
                 </table>
@@ -78,12 +84,11 @@
                 <div class="input-group">
                     <input type="text" aria-label="promo-code" width="20px">
                     <button type="button" class="btn btn-danger">Apply</button>
-                </div>
-                
-            </div>
-          
+                </div>                
+            </div>         
         </div>
     </div>
+    <!-- Total -->
     <div class="container">
         <hr>
         <h1 class="text-center">Total: $<span>1299</span></h1>
