Assignment-4 Mac Book Pro

--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
                 <h2>Customize your Blue 24-inch <br>iMac with Apple M1 chip.</h2>
                 <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency <br>d cores, 7-core GPU, and 16-core Neural Engine 8GB unified memory 256GB <br> SSD storage Two Thuderbolt/USB 4 ports Magic Mouse Magic Keyboard - <br> US English.</p>
 
+                <!-- Memory -->
                 <h6>Memory</h6>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-primary">8GB unified memory</button>                    
+                    <button type="button" class="btn btn-primary" id="eightGBmemory" onclick="">8GB unified memory</button>                    
                 </div>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-secondary">16GB unified memory</button>                   
+                    <button type="button" class="btn btn-secondary" id="sixteenGBmemory">16GB unified memory</button>                   
                 </div>
                 <br>
                 <br>
+
+                <!-- Storage -->
                 <h6>Storage</h6>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
                     <button type="button" class="btn btn-primary">256GB SSD storage</button>                    
