--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!-- Memory -->
                 <h6>Memory</h6>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-primary" id="eightGBmemory" onclick="">8GB unified memory</button>                    
+                    <button type="button" class="btn btn-primary" id="eightGBmemory">8GB unified memory</button>                    
                 </div>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
                     <button type="button" class="btn btn-secondary" id="sixteenGBmemory">16GB unified memory</button>                   
@@ -61,8 +61,8 @@
                 <table class="table table-dark table-hover">
                     <tbody>
                         <tr>
-                          <td>Best Price</td>
-                          <td>$ <span>1299</span></td>
+                          <td>Best Price</td> 
+                          <td>$<span id="bestPrice">1299</span></td>
                         </tr>
                         <tr>
                           <td>Extra Memory Cost</td>
@@ -98,6 +98,9 @@
         <br>
 
     </div>
+
+    <!-- Script -->
+    <script src="product-price.js"></script>
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
