--- a/test.html
+++ b/test.html
@@ -26,10 +26,10 @@
                 <!-- Memory Buttons -->
                 <h6>Memory</h6>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-primary" id="8gb-ram">8GB unified memory</button>                    
+                    <button type="button" class="btn btn-primary" id="8gb">8GB unified memory</button>                    
                 </div>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-secondary" id="16gb-ram">16GB unified memory</button>                   
+                    <button type="button" class="btn btn-secondary" id="16gb">16GB unified memory</button>                   
                 </div>
                 <br>
                 <br>
