--- a/test.html
+++ b/test.html
@@ -37,13 +37,13 @@
                 <!-- Storage Buttons -->
                 <h6>Storage</h6>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-primary" id="256gb-rom">256GB SSD storage</button>                    
+                    <button type="button" class="btn btn-primary" id="ssd-256gb">256GB SSD storage</button>                    
                 </div>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-secondary" id="512gb-rom">512GB SSD storage</button>                   
+                    <button type="button" class="btn btn-secondary" id="ssd-512gb">512GB SSD storage</button>                   
                 </div>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-success" id="1tb-rom">1TB SSD storage</button>                   
+                    <button type="button" class="btn btn-success" id="ssd-1tb">1TB SSD storage</button>                   
                 </div>
                 <br>
                 <br>
