--- a/test.html
+++ b/test.html
@@ -51,10 +51,10 @@
                 <!-- Delivery Options -->
                 <h6>Choose your delivery option</h6>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-primary p-2" id="free-shipping">Friday, Aug 25 FREE Prime Delivery</button>                    
+                    <button type="button" class="btn btn-primary p-2" id="free-delivery">Friday, Aug 25 FREE Prime Delivery</button>                    
                 </div>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn btn-secondary p-2" id="express-shipping">Friday, Aug 21 Delivery charge $20</button>                   
+                    <button type="button" class="btn btn-secondary p-2" id="express-delivery">Friday, Aug 21 Delivery charge $20</button>                   
                 </div> 
                 <br>
                 <br>
