--- a/test.html
+++ b/test.html
@@ -76,7 +76,7 @@
                         </tr>
                         <tr>
                           <td>Delivery Charge</td>
-                          <td>$ <span id="shipping-cost">0</span></td>
+                          <td>$ <span id="delivery-charge">0</span></td>
                         </tr>
                         <tr>             
                           <td class="text-warning">Total Price</td> 
