--- a/test.html
+++ b/test.html
@@ -92,14 +92,14 @@
                     
                 </div> 
                 <br>
-                <p id="invalid-promo-text" class="text-danger"></p>               
+                <p id="invalid-promo-text" class="text-danger fs-1 text"></p>               
             </div>         
         </div>
     </div>
     <!-- Grand Total -->
     <div class="container">
         <hr>
-        <h1 class="text-center" >Total: $<span id="grand-total">1299</span></h1>
+        <h1 class="text-center" >Total: $<span id="grand-total" >1299</span></h1>
         <br>
 
     </div>
